# FAME

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
fame/: __init__.py
fame/abstract_domain/: abstract.py  cardinality_domain.py  cardinality_domain_v2.py  utils.py
fame/attack/: __init__.py  abstract_minimal_explanation.py  abstract_minimal_explanation_sequential.py  attack.py  fgsm.py  pgd.py  utils.py
fame/batch_free/: abstract.py  free.py  greedy.py  milp.py  order.py  singleton.py  utils.py
fame/experiments/: __init__.py  utils_run.py
notebooks/: FAME_CIFAR10_cnn.ipynb  FAME_GTSRB_10x2.ipynb  FAME_GTSRB_cnn.ipynb  FAME_MNIST_10x2.ipynb  FAME_MNIST_10x2_visu.ipynb  FAME_MNIST_cnn.ipynb  FAME_MNIST_visu.ipynb  VISU_VERIX.ipynb  cifar10_cnn.py  gtsrb_cnn.py  run.sh  script_gtsrb_10x2.py  script_gtsrb_cnn.py  script_mnist_10x2.py  script_mnist_cnn.py
notebooks/configs/: cifar10_configs.py  definitions.py  layers.py
notebooks/models/: resnet_2b_ported.keras  xairobas_gtsrb-10x2.keras  xairobas_gtsrb-cnn.keras  xairobas_mnist-10x2.keras  xairobas_mnist-cnn.keras
notebooks/results/: MNIST_10x2_A_1_v0.csv  MNIST_10x2_A_1_v1.csv  MNIST_10x2_A_2.csv  MNIST_10x2_B.csv
notebooks/results/final_version/A_1/: GTSRB_10x2_A_1.csv  GTSRB_cnn_A_1.csv  MNIST_10x2_A_1.csv  MNIST_cnn_A_1.csv
notebooks/results/final_version/A_2/: GTSRB_10x2_A_2.csv  GTSRB_cnn_A_2.csv  MNIST_10x2_A_2.csv  MNIST_cnn_A_2.csv
notebooks/results/final_version/B/: GTSRB_10x2_B_fgsm.csv  GTSRB_cnn_B_fgsm.csv  GTSRB_cnn_B_pgd.csv  MNIST_10x2_B_fgsm.csv  MNIST_cnn_B_fgsm.csv  MNIST_cnn_B_pgd.csv
notebooks/results/final_version/C/: GTSRB_10x2_C_fgsm.csv  GTSRB_cnn_C_fgsm.csv  (+2 more)
(+4 files in other folders)
